--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,16 +1,24 @@
-name: Build Xamarin.Android app
+name: Build Xamarin.iOS app
 
 on: [push]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set default Xamarin SDK versions
+      run: |
+        $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --ios=14.10
 
-    
+    - name: Set default Xcode 12.3
+      run: |
+        XCODE_ROOT=/Applications/Xcode_12.3.0.app
+        echo "MD_APPLE_SDK_ROOT=$XCODE_ROOT" >> $GITHUB_ENV
+        sudo xcode-select -s $XCODE_ROOT
+
     - name: Setup .NET Core SDK 5.0.x
       uses: actions/setup-dotnet@v1
       with:
@@ -20,4 +28,4 @@ jobs:
       run: nuget restore source/EduCATS.sln
 
     - name: Build
-      run: msbuild source/EduCATS.sln /t:PackageForAndroid /p:Configuration=Debug
+      run: msbuild source/EduCATS.sln /p:Platform=iPhoneSimulator /t:Rebuild
