--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,4 +28,4 @@ jobs:
       run: nuget restore source/EduCATS.sln
 
     - name: Build
-      run: msbuild source/EduCATS.sln /p:Platform=iPhoneSimulator /t:Rebuild
+      run: msbuild source/EduCATS.sln /p:Configuration=Debug /p:Platform=iPhoneSimulator /t:Rebuild
