--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: Build Xamarin.iOS app
+name: Build Xamarin.Android app
 
 on: [push]
 
@@ -11,13 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set default Xamarin SDK versions
       run: |
-        $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --ios=14.10
-
-    - name: Set default Xcode 12.3
-      run: |
-        XCODE_ROOT=/Applications/Xcode_12.3.0.app
-        echo "MD_APPLE_SDK_ROOT=$XCODE_ROOT" >> $GITHUB_ENV
-        sudo xcode-select -s $XCODE_ROOT
+        $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.10 --android=10.2
 
     - name: Setup .NET Core SDK 5.0.x
       uses: actions/setup-dotnet@v1
@@ -28,4 +22,4 @@ jobs:
       run: nuget restore source/EduCATS.sln
 
     - name: Build
-      run: msbuild source/EduCATS.sln /p:Configuration=Debug /p:Platform=iPhoneSimulator /t:Rebuild
+      run: msbuild source/EduCATS.sln /t:Any /p:Configuration=Debug
