--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -12,9 +12,9 @@ jobs:
     - name: Set default Xamarin SDK versions
       run: |
         $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --ios=14.10
-    - name: Set default Xcode 12.3
+    - name: Set default Xcode 13
       run: |
-        XCODE_ROOT=/Applications/Xcode_12.3.0.app
+        XCODE_ROOT=/Applications/Xcode_13.app
         echo "MD_APPLE_SDK_ROOT=$XCODE_ROOT" >> $GITHUB_ENV
         sudo xcode-select -s $XCODE_ROOT
     - name: Setup .NET Core SDK 5.0.x
